<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray">
    <!--USER SUMMARY-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="16dp">
        <!--PHOTO PROFILE-->
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:background="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp">
            <ImageView
                android:scaleType="centerCrop"
                android:src="@drawable/mountain"
                android:layout_width="72dp"
                android:layout_height="72dp" />
        </LinearLayout>
        <!--NAME-->
        <TextView
            android:id="@+id/name_textview"
            android:textStyle=""
            android:textSize="18sp"
            android:text="@string/timeline_name_sampletext"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <!--EMAIL-->
        <TextView
            android:id="@+id/email_textview"
            android:fontFamily="sans-serif-light"
            android:textStyle=""
            android:textSize="14sp"
            android:text="@string/timeline_email_sampletext"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
        <!--ACTIVITY RECAP-->
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <!--TRACK-->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:textStyle=""
                    android:textSize="12sp"
                    android:text="@string/timeline_track_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/track_textview"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeline_track_sampletext"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="20sp" />
            </LinearLayout>
            <!--AVERAGE SPEED-->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:textStyle=""
                    android:textSize="12sp"
                    android:text="@string/timeline_avgspeed_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/avg_speed_textview"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeline_avgspeed_sampletext"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="20sp" />
            </LinearLayout>
            <!--CALORI BURNED-->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:textStyle=""
                    android:textSize="12sp"
                    android:text="@string/timeline_calori_burned_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:id="@+id/calori_burned_textview"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeline_calori_burned_sampletext"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--RECENT ACTIVITIES-->
    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeline_recent_activities_text"
            android:textSize="15sp" />
        <!--DAY DIVIDER-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/circle_white"
            android:fontFamily="sans-serif"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/timeline_devider_text" />
        <!--LIST OF ACTIVITIES-->
        <ListView
            android:id="@+id/log_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>

