<?xml version="1.0" encoding="utf-8"?>
<!--MAIN ACTIVITY-->
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/light_gray">
    <View
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical" />
    <LinearLayout
        android:id="@+id/targetSummary"
        android:gravity="bottom"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--NUMBER OF DAYS TITLE-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/main_numbersofdaytitle_text"
            android:textColor="@color/white"
            android:textSize="32sp"/>
        <!--NUMBER OF DAYS DESCRIPTION-->
        <TextView
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/main_numbersofdaydescription_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/targetSummary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">
        <!--NEXT MENU TITLE-->
        <TextView
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"
            android:text="@string/main_nextmenutitle_text"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--MENU EXERCISE AND NUTRITION RECAP-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <!--EXCERSIZE MENU-->
            <LinearLayout
                android:id="@+id/exercise_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="#fafafa"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">
                <!--EXCERSIZE ICON-->
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_directions_run_black_24dp"
                    android:tint="@color/colorAccent" />
                <!--EXCERCISE TITLE-->
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/main_exercisetitle_text"
                    android:textSize="12sp"
                    android:textStyle="" />
                    <!--EXERCISE DESCRIPTION-->
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/main_exercisedescription_text"
                    android:textSize="10sp"
                    android:textStyle="" />
            </LinearLayout>
            <!--NUTRITION MENU-->
            <LinearLayout
                android:id="@+id/nutrition_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="#fafafa"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">
                <!--NUTRITION ICON-->
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_restaurant_black_24dp"
                    android:tint="@color/colorAccent" />
                <!--NUTRITION TITLE-->
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/main_nutritiontitle_text"
                    android:textSize="12sp"
                    android:textStyle="" />
                <!--NUTRITION DESCRIPTION-->
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/main_nutritiondescription_text"
                    android:textSize="10sp"
                    android:textStyle="" />
            </LinearLayout>
        </LinearLayout>
        <!--MENU ACHIEVEMENTS AND RECOMMENDATION RECAP-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <!--ACHIEVEMENTS MENU-->
            <LinearLayout
                android:id="@+id/achievements_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="#fafafa"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">
                <!--ACHIEVEMENTS ICON-->
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_my_location_black_24dp"
                    android:backgroundTint="@color/colorAccent"
                    android:padding="8dp" />
                <!--ACHIEVEMENTS TITLE-->
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/main_achievementstitle_text"
                    android:textSize="12sp"
                    android:textStyle="" />
                <!--ACHIEVEMENTS DESCRIPTION-->
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/main_achievementsdescription_text"
                    android:textSize="10sp"
                    android:textStyle="" />
            </LinearLayout>
            <!--RECOMMENDATIONS  MENU-->
            <LinearLayout
                android:id="@+id/recommendation_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="#fafafa"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">
                <!--RECOMMENDATIONS  ICON-->
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_thumb_up_black_24dp"
                    android:backgroundTint="@color/colorAccent"
                    android:padding="8dp" />
                <!--RECOMMENDATIONS  TITLE-->
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/main_recommendationstitle_text"
                    android:textSize="12sp"
                    android:textStyle="" />
                <!--RECOMMENDATIONS  DESCRIPTION-->
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/main_recommendationsdescription_text"
                    android:textSize="10sp"
                    android:textStyle="" />
            </LinearLayout>
        </LinearLayout>
        <!--MENU TIMELINE AND SETTINGS RECAP-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <!--MENU TIMELINE-->
            <LinearLayout
                android:id="@+id/timeline_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="#fafafa"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">
                <!--TIMELINE ICON-->
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_timeline_black_24dp"
                    android:backgroundTint="@color/colorAccent"
                    android:padding="8dp" />
                <!--TIMELINE TITLE-->
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/main_timelinetitle_text"
                    android:textSize="12sp"
                    android:textStyle="" />
                <!--TIMELINE DESCRIPTION-->
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/main_timelinedescription_text"
                    android:textSize="10sp"
                    android:textStyle="" />
            </LinearLayout>
            <!--MENU SETTINGS-->
            <LinearLayout
                android:id="@+id/settings_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="#fafafa"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">
                <!--SETTINGS ICON-->
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_settings_black_24dp"
                    android:backgroundTint="@color/colorAccent"
                    android:padding="8dp" />
                <!--SETTINGS TITLE-->
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/main_settingstitle_text"
                    android:textSize="12sp"
                    android:textStyle="" />
                <!--SETTINGS DESCRIPTION-->
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/main_settingsdescription_title"
                    android:textSize="10sp"
                    android:textStyle="" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>


