<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/light_gray">
    <LinearLayout
        android:background="@color/colorPrimary"
        android:id="@+id/targetSummary"
        android:gravity="center"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <!--PREV BUTTON-->
        <ImageView
            android:id="@+id/previous_button"
            android:layout_height="match_parent"
            android:layout_width="32dp"
            android:src="@drawable/ic_navigate_before_black_24dp"
            android:tint="@color/white" />
        <!--RECOMMENDATION-->
        <LinearLayout
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommendation_title_sampletext"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:id="@+id/description_textview"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommendation_description_sampletext"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>
        <!--NEXT BUTTON-->
        <ImageView
            android:id="@+id/next_button"
            android:layout_height="match_parent"
            android:layout_width="32dp"
            android:src="@drawable/ic_navigate_next_black_24dp"
            android:tint="@color/white" />
    </LinearLayout>
    <!--REMINDER BUTTON-->
    <LinearLayout
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:fontFamily="sans-serif-light"
            android:textSize="18sp"
            android:text="@string/reccomendation_reminder_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/reminder_button"
            android:layout_marginLeft="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_accent"
            android:text="@string/recommendation_reminder_button_text"
            android:textColor="@color/white"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</RelativeLayout>


